--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^9.5.1",
-    "@adonisjs/core": "^6.18.0",
+    "@adonisjs/core": "^6.19.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.8.0",
     "@vinejs/vine": "^3.0.1",
+    "googleapis": "^166.0.0",
     "luxon": "^3.7.2",
     "mysql2": "^3.15.2",
     "reflect-metadata": "^0.2.2"
