--- a/package.json
+++ b/package.json
@@ -35,19 +35,22 @@
     "@adonisjs/assembler": "^7.8.2",
     "@adonisjs/eslint-config": "^2.0.0",
     "@adonisjs/prettier-config": "^1.4.4",
-    "@adonisjs/tsconfig": "^1.4.0",
+    "@adonisjs/tsconfig": "^1.4.1",
     "@japa/api-client": "^3.1.0",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.11.24",
-    "@types/axios": "^0.9.36",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/luxon": "^3.7.1",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.19.1",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8"
   },
@@ -58,11 +61,18 @@
     "@adonisjs/lucid": "^21.8.0",
     "@vinejs/vine": "^3.0.1",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "googleapis": "^166.0.0",
     "luxon": "^3.7.2",
+    "module-alias": "^2.2.3",
     "mysql2": "^3.15.2",
     "reflect-metadata": "^0.2.2",
-    "swagger-ui-dist": "^5.30.3"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.8.2",
+    "yamljs": "^0.3.0"
   },
   "hotHook": {
     "boundaries": [
